// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches expected output: @supports.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "test": {
    "@supports (display: grid)": {
      "display": "grid"
    },
    "@supports not (display: grid)": {
      "float": "right"
    }
  },
  "testComplex": {
    "@supports (display: table-cell) and ((display: list-item) and (display:run-in))": {
      "color": "red"
    },
    "@supports (transform-style: preserve) or (-moz-transform-style: preserve) or (-o-transform-style: preserve) or (-webkit-transform-style: preserve)": {
      "color": "red"
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
@supports (display: grid) {
  ._3oUfxs {
    display: grid;
  }
}
@supports not (display: grid) {
  ._2Q4zfo {
    float: right;
  }
}
@supports (display: table-cell) and ((display: list-item) and (display: run-in)) {
  .wUqnh {
    color: #f00;
  }
}
@supports (transform-style: preserve) or (-moz-transform-style: preserve) or
  (-o-transform-style: preserve) or (-webkit-transform-style: preserve) {
  .wUqnh {
    color: #f00;
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('test')}
  ↓ ↓ ↓
class="_3oUfxs _2Q4zfo"

className={styles('testComplex')}
  ↓ ↓ ↓
class="wUqnh"

`;

exports[`matches expected output: @supports-nested.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "test": {
    "@supports (display: grid)": {
      "color": "red",
      "@supports not (display: grid)": {
        "color": "blue",
        "@supports (display: table-cell) and ((display: list-item) and (display:run-in))": {
          "color": "orange"
        }
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
@supports (display: grid) {
  .wUqnh {
    color: #f00;
  }
  @supports not (display: grid) {
    ._4fo5TC {
      color: #00f;
    }
    @supports (display: table-cell) and
      ((display: list-item) and (display: run-in)) {
      ._4ufr6B {
        color: #ffa500;
      }
    }
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('test')}
  ↓ ↓ ↓
class="wUqnh _4fo5TC _4ufr6B"

`;

exports[`matches expected output: @unknown.error.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "test": {
    "@unknown": {
      "color": "red"
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
THROWN EXCEPTION:

Error: Unsupported at rule "@unknown"
`;

exports[`matches expected output: media-queries.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "test": {
    "color": "red",
    "@media print": {
      "color": "red"
    },
    "@media (min-width: 30em) and (max-width: 50em)": {
      "color": "blue"
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
.wUqnh {
  color: #f00;
}
@media print {
  .wUqnh {
    color: #f00;
  }
}
@media (min-width: 30em) and (max-width: 50em) {
  ._4fo5TC {
    color: #00f;
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('test')}
  ↓ ↓ ↓
class="wUqnh _4fo5TC"

`;

exports[`matches expected output: media-queries-multiple.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "aaa": {
    "color": "red",
    "fontSize": 32,
    "@media print": {
      "color": "red",
      "fontSize": 16
    },
    "@media (min-width: 30em) and (max-width: 50em)": {
      "color": "blue"
    }
  },
  "bbb": {
    "@media print": {
      "color": "green"
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
.wUqnh {
  color: #f00;
}
._2ZJp7Y {
  font-size: 2rem;
}
@media print {
  .wUqnh {
    color: #f00;
  }
  .Zld8p {
    font-size: 1rem;
  }
  .PJDYD {
    color: #008000;
  }
}
@media (min-width: 30em) and (max-width: 50em) {
  ._4fo5TC {
    color: #00f;
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('aaa')}
  ↓ ↓ ↓
class="wUqnh _2ZJp7Y Zld8p _4fo5TC"

className={styles('bbb')}
  ↓ ↓ ↓
class="PJDYD"

`;

exports[`matches expected output: media-queries-nested.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "test": {
    "@media print": {
      "color": "red",
      "@media (max-width: 12cm)": {
        "color": "blue"
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
@media print {
  .wUqnh {
    color: #f00;
  }
  @media (max-width: 12cm) {
    ._4fo5TC {
      color: #00f;
    }
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('test')}
  ↓ ↓ ↓
class="wUqnh _4fo5TC"

`;

exports[`matches expected output: media-queries-nested-deep.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "test": {
    "@media (max-width: 10cm)": {
      "color": "#F00000",
      "backgroundColor": "#FFFFFF",
      "@media (max-width: 9cm)": {
        "color": "#0F0000",
        "backgroundColor": "#FFFFFF",
        "@media (max-width: 8cm)": {
          "color": "#00F000",
          "backgroundColor": "#FFFFFF",
          "@media (max-width: 7cm)": {
            "color": "#000F00",
            "backgroundColor": "#FFFFFF",
            "@media (max-width: 6cm)": {
              "color": "#0000F0",
              "backgroundColor": "#FFFFFF",
              "@media (max-width: 5cm)": {
                "color": "#00000F",
                "backgroundColor": "#FFFFFF"
              }
            }
          }
        }
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
@media (max-width: 10cm) {
  ._1U1jA9 {
    color: #f00000;
  }
  ._4lYNbZ {
    background-color: #fff;
  }
  @media (max-width: 9cm) {
    ._2cr3oP {
      color: #0f0000;
    }
    ._4lYNbZ {
      background-color: #fff;
    }
    @media (max-width: 8cm) {
      ._4zgUMg {
        color: #00f000;
      }
      ._4lYNbZ {
        background-color: #fff;
      }
      @media (max-width: 7cm) {
        ._3XFQyd {
          color: #000f00;
        }
        ._4lYNbZ {
          background-color: #fff;
        }
        @media (max-width: 6cm) {
          .CSuN9 {
            color: #0000f0;
          }
          ._4lYNbZ {
            background-color: #fff;
          }
          @media (max-width: 5cm) {
            ._3BdYKq {
              color: #00000f;
            }
            ._4lYNbZ {
              background-color: #fff;
            }
          }
        }
      }
    }
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('test')}
  ↓ ↓ ↓
class="_1U1jA9 _4lYNbZ _2cr3oP _4zgUMg _3XFQyd CSuN9 _3BdYKq"

`;

exports[`matches expected output: media-queries-nested-pseudo.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "media": {
    "color": "red",
    "@media print": {
      "color": "red",
      ":hover": {
        "color": "pink"
      }
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
.wUqnh {
  color: #f00;
}
@media print {
  .wUqnh {
    color: #f00;
  }
  ._4rAdwD:hover {
    color: #ffc0cb;
  }
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('media')}
  ↓ ↓ ↓
class="wUqnh _4rAdwD"

`;

exports[`matches expected output: pseudo-classes.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "link": {
    "textDecoration": "none",
    ":hover": {
      "textDecoration": "underline"
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
._134wwt {
  text-decoration: none;
}
._22QzO9:hover {
  text-decoration: underline;
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('link')}
  ↓ ↓ ↓
class="_134wwt _22QzO9"

`;

exports[`matches expected output: pseudo-classes-multiple.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "link": {
    "textDecoration": "none",
    ":hover": {
      "textDecoration": "none",
      "color": "red"
    },
    ":active": {
      "color": "red"
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
._134wwt {
  text-decoration: none;
}
.XJjf5:hover {
  text-decoration: none;
}
._4sFdkU:hover {
  color: #f00;
}
.ERwS0:active {
  color: #f00;
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('link')}
  ↓ ↓ ↓
class="_134wwt XJjf5 _4sFdkU ERwS0"

`;

exports[`matches expected output: pseudo-elements.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "link": {
    "textDecoration": "none",
    ":hover": {
      "textDecoration": "underline"
    },
    "::after": {
      "content": "∞"
    },
    "::before": {
      "content": "∞"
    }
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
._134wwt {
  text-decoration: none;
}
._22QzO9:hover {
  text-decoration: underline;
}
._2Rpe4g::after {
  content: "∞";
}
._3ou8wp::before {
  content: "∞";
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('link')}
  ↓ ↓ ↓
class="_134wwt _22QzO9 _2Rpe4g _3ou8wp"

`;

exports[`matches expected output: simple-stylesheet.json 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  "redStyle": {
    "color": "red"
  },
  "blueStyle": {
    "color": "blue"
  },
  "greenStyle": {
    "color": "green"
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
.wUqnh {
  color: #f00;
}
._4fo5TC {
  color: #00f;
}
.PJDYD {
  color: #008000;
}

~~~~~~~~~~ USAGE ~~~~~~~~~~

className={styles('redStyle')}
  ↓ ↓ ↓
class="wUqnh"

className={styles('blueStyle')}
  ↓ ↓ ↓
class="_4fo5TC"

className={styles('greenStyle')}
  ↓ ↓ ↓
class="PJDYD"

`;
